--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -56,9 +56,13 @@ background-color: rgba(54, 54, 54, 0.879);
 padding-bottom: 10px;
 }
 footer{
+    position: fixed;
    text-align: center;
     background-color: rgba(77, 77, 77, 0.701);
     color: rgb(0, 0, 0);
+    align-items: baseline;
+    width: 100%;
+    padding-top:;
 }
 .card{
     background-color: rgba(0, 0, 0, 0.733);
@@ -123,6 +127,7 @@ h2{
     border-radius: 20px;
     color: white;
     margin-top: 20px;
+   
 }
 .addpic{
     width: 3rem;
@@ -138,7 +143,7 @@ width: 5rem;
 .del{
     border-radius: 10px;
     width: 5rem;
-    background-color: rgb(45, 45, 45);
+    background-color: rgb(177, 0, 0);
     color: white;
     }
     .del:hover{
